personalisation du formulaire de contact et espacement des divers contenus

--- a/portefolio.html
+++ b/portefolio.html
@@ -158,10 +158,12 @@
                     <img src="img/github.png" alt="github">
                 </section>
             </div>
-            <div>
-                <h2 id="Me_contacter">Me contacter</h2>
-                <p>Un projet, une question n'hésitez pas à me contacter.
-                    Je vous répondrai dans les meilleurs délais</p>
+            <div class="conteneurForm">
+                <section>
+                    <h2 id="Me_contacter">Me contacter</h2>
+                    <p>Un projet, une question n'hésitez pas à me contacter.
+                        Je vous répondrai dans les meilleurs délais</p>
+                </section>
                 <form action="#" method="post">
                     <input type="text" name="nom" placeholder="nom">
                     <input type="text" name="num" placeholder="numéro de téléphone">
