Fonctionnalité menu burger en javascript, création d'un dossier cv pour implémenter son téléchargement

--- a/portefolio.html
+++ b/portefolio.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0b1009deec.js" crossorigin="anonymous"></script>
+    <script src="menuBurger.js" async></script>
     <title>portfolio</title>
 </head>
 
@@ -25,7 +26,7 @@
                 <a href="#Me_contacter">Me contacter</a>
             </nav>
             <div class="menuBurger">
-                <button id="afficher"><i class="fas fa-bars"></i></button>
+                <button id="afficherMenu"><i class="fas fa-bars"></i></button>
             </div>
         </header>
         <main>
@@ -35,7 +36,7 @@
                     animaux
                 </p>
                 <p>Pour en savoir plus sur mon parcours et expérience professionnelle cliquez sur mon cv</p>
-                <img src="img/Cv_Maylis_Gaillard.png" alt="Cv_Maylis_Gaillard">
+                <img src="img/Cv_Maylis_Gaillard.png" alt="Cv_Maylis_Gaillard" id="telechargement">
             </section>
             <div>
                 <h2 id="Mes_diplomes">Mes diplômes</h2>
