création fenetre modale

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,12 @@
                     animaux
                 </p>
                 <p>Pour en savoir plus sur mon parcours et expérience professionnelle cliquez sur mon cv</p>
-                <img src="img/Cv_Maylis_Gaillard.png" alt="Cv_Maylis_Gaillard" id="telechargement">
+                <img src="img/Cv_Maylis_Gaillard.png" alt="Cv_Maylis_Gaillard" id="cv">
             </section>
+            <div id="modale" class="cacher">
+                <button id="fermerCv"><i class="far fa-times-circle"></i></button>
+                <object data="cv/Cv_Maylis_Gaillard.pdf" type="application/pdf"></object>
+            </div>
             <div>
                 <h2 id="Mes_diplomes">Mes diplômes</h2>
                 <div class="diplomes">
