amélioration du design du portfolio (experiences, réalisation, formulaire de contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
         <main>
             <section class="presentation">
                 <h2 id="Qui_suis_je">Qui suis-je ?</h2>
-                <p>Je suis Maylis Gaillard Développeuse Web* Junior. J'ai une appétence pour l'informatique et les
+                <p>Je suis Maylis Gaillard Développeuse Web Junior. J'ai une appétence pour l'informatique et les
                     animaux
                 </p>
                 <p>Pour en savoir plus sur mon parcours et expérience professionnelle cliquez sur mon cv</p>
@@ -84,7 +84,7 @@
             </div>
             <div>
                 <h2 id="Mon_experience">Mon expérience</h2>
-                <article>
+                <article class="Artcolombbus">
                     <h3>Colombbus</h3>
                     <article>
                         <p>
@@ -96,7 +96,7 @@
                 </article>
                 <article>
                     <h3>Mes missions</h3>
-                    <article>
+                    <article class="ArtMissions">
                         <h4>Refonte du site ASEA</h4>
                         <p>
                             J'ai réalisé dans le cadre de mes fonctions une refonte de site web avec le CMS* Wordpresse
@@ -105,14 +105,14 @@
                             thème Divi*.
                         </p>
                     </article>
-                    <article>
+                    <article class="ArtMissions">
                         <h4>Stage chez Boîte à histoire</h4>
                         <p>
                             J'ai pu maintenir un site web via Wordpress et
                             mettre en place le projet La Junior Parfumée dans le cadre de ma formation.
                         </p>
                     </article>
-                    <article>
+                    <article class="ArtMissions">
                         <h4>Création du site Kaoline porcelaine</h4>
                         <p>
                             Conception d'un site web avec le framework* Symfony 5 pour une micro
@@ -141,24 +141,26 @@
             </div>
             <div>
                 <h2 id="Mes_realisations">Mes réalisations</h2>
-                <figure>
-                    <img src="#" alt="Kaoline porcelaine">
-                    <figcaption>
-                        Kaoline porcelaine
-                    </figcaption>
-                </figure>
-                <figure>
-                    <img src="#" alt="AniMangaQuiz">
-                    <figcaption>
-                        AniMangaQuiz
-                    </figcaption>
-                </figure>
-                <figure>
-                    <img src="#" alt="Infopets">
-                    <figcaption>
-                        Infopets
-                    </figcaption>
-                </figure>
+                <div class="realisations">
+                    <figure>
+                        <img src="img/photo_projet.png" alt="Kaoline porcelaine">
+                        <figcaption>
+                            Kaoline porcelaine
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/photo_projet.png" alt="AniMangaQuiz">
+                        <figcaption>
+                            AniMangaQuiz
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/photo_projet.png" alt="Infopets">
+                        <figcaption>
+                            Infopets
+                        </figcaption>
+                    </figure>
+                </div>
                 <section class="github">
                     <p>Vous pouvez aussi les trouver sur mon compte github</p>
                     <img src="img/github.png" alt="github">
@@ -176,7 +178,7 @@
                     <input type="text" name="mail" placeholder="adresse mail">
                     <textarea name="message" id="message" cols="30" rows="10"
                         placeholder="motif de votre demande"></textarea>
-                    <input type="submit" value="Envoyer">
+                    <input type="submit" value="Envoyer" class="btnContact">
                 </form>
             </div>
         </main>
