Début contrôle du formulaire

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/0b1009deec.js" crossorigin="anonymous"></script>
     <script src="menuBurger.js" async></script>
     <script src="cv.js" async></script>
+    <script src="controleFormContact.js" async></script>
     <title>portfolio</title>
 </head>
 
@@ -171,13 +172,13 @@
                 <p>Un projet, une question n'hésitez pas à me contacter.
                     Je vous répondrai dans les meilleurs délais</p>
             </section>
-            <form action="#" method="post">
-                <input type="text" name="nom" placeholder="nom">
+            <form action="#" method="post" id="form">
+                <input type="text" name="nom" placeholder="nom" id="nom">
                 <input type="text" name="num" placeholder="numéro de téléphone">
                 <input type="text" name="mail" placeholder="adresse mail">
                 <textarea name="message" id="message" cols="30" rows="10"
                     placeholder="motif de votre demande"></textarea>
-                <input type="submit" value="Envoyer" class="btnContact">
+                <input type="submit" value="Envoyer" class="btnContact" id="btnEnvoyer">
             </form>
         </div>
     </main>
