amélioration de la fonctionnalité menuburger et du design du portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,21 +47,6 @@
             <h2 id="Mes_diplomes">Mes diplômes</h2>
             <div class="diplomes">
                 <figure>
-                    <img src="img/Bac pro.jpeg" alt="Bac pro animalerie">
-                    <figcaption>
-                        2016-Bac pro
-                        Technitien conseil vente en animalerie
-                        Maison Familiale Rurale
-                    </figcaption>
-                </figure>
-                <figure>
-                    <img src="img/Attestation_Succes_19042021151417_343570.jpg" alt="Module de java">
-                    <figcaption>
-                        2020-Module de Java
-                        CNAM
-                    </figcaption>
-                </figure>
-                <figure>
                     <img src="img/Certificat-professionnel-Techniques-de-développement-Web-_RS1448_-R93618XAP1638961899.jpg"
                         alt="Certificat professionnel Techniques developpement web">
                     <figcaption>
@@ -77,6 +62,21 @@
                         2021-Certificat professionnel
                         Techniques d'intégration web
                         Webforce3
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Attestation_Succes_19042021151417_343570.jpg" alt="Module de java">
+                    <figcaption>
+                        2020-Module de Java
+                        CNAM
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Bac pro.jpeg" alt="Bac pro animalerie">
+                    <figcaption>
+                        2016-Bac pro
+                        Technitien conseil vente en animalerie
+                        Maison Familiale Rurale
                     </figcaption>
                 </figure>
             </div>
@@ -96,29 +96,32 @@
             </article>
             <article>
                 <h3>Mes missions</h3>
-                <article class="ArtMissions">
-                    <h4>Refonte du site ASEA</h4>
-                    <p>
-                        J'ai réalisé dans le cadre de mes fonctions une refonte de site web avec le CMS* Wordpresse
-                        via
-                        le
-                        thème Divi*.
-                    </p>
-                </article>
-                <article class="ArtMissions">
-                    <h4>Stage chez Boîte à histoire</h4>
-                    <p>
-                        J'ai pu maintenir un site web via Wordpress et
-                        mettre en place le projet La Junior Parfumée dans le cadre de ma formation.
-                    </p>
-                </article>
-                <article class="ArtMissions">
-                    <h4>Création du site Kaoline porcelaine</h4>
-                    <p>
-                        Conception d'un site web avec le framework* Symfony 5 pour une micro
-                        entreprise dans le cadre de ma soutenance pour obtenir mes deux certificats professionnels.
-                    </p>
-                </article>
+                <div class="contenus_missions">
+                    <article class="ArtMissions">
+                        <h4>Refonte du site ASEA</h4>
+                        <p>
+                            J'ai réalisé dans le cadre de mes fonctions une refonte de site web avec le CMS* Wordpresse
+                            via
+                            le
+                            thème Divi*.
+                        </p>
+                    </article>
+                    <article class="ArtMissions">
+                        <h4>Stage chez Boîte à histoire</h4>
+                        <p>
+                            J'ai pu maintenir un site web via Wordpress et
+                            mettre en place le projet La Junior Parfumée dans le cadre de ma formation.
+                        </p>
+                    </article>
+                    <article class="ArtMissions">
+                        <h4>Création du site Kaoline porcelaine</h4>
+                        <p>
+                            Conception d'un site web avec le framework* Symfony 5 pour une micro
+                            entreprise dans le cadre de ma soutenance pour obtenir mes deux certificats professionnels.
+                        </p>
+                    </article>
+                </div>
+
             </article>
             <article>
                 <h5>Lexique</h5>
@@ -180,6 +183,9 @@
                     placeholder="motif de votre demande"></textarea>
                 <input type="submit" value="Envoyer" class="btnContact" id="btnEnvoyer">
             </form>
+        </div>
+        <div>
+            <a href="#">scroll</a>
         </div>
     </main>
 </body>
